<resources>
    <string name="app_name">MathGame</string>
    <string name="tv_play">Play</string>
    <string name="tv_timer">%ds</string>
    <string name="tv_sum">%1$d %2$s %3$d =</string>
    <string name="tv_points">%1d/%2d</string>
    <string name="tv_result_correct">Correct!</string>
    <string name="tv_result_wrong">Wrong!</string>
    <string name="content_description_icon">icon</string>
    <string name="tv_answer">\?</string>
    <string name="btn_text">7</string>
    <string name="tv_score">Score</string>
    <string name="tv_game_over">GameOver</string>
    <string name="content_description_restart_game">Restart game</string>
    <string name="content_description_exit_game">Exit game</string>
    <string name="tv_high_score">High Score</string>
    <string name="tv_personal_best">Personal best:</string>
    <string name="tv_best">best</string>
</resources>
